# fastapi-strawberry-prisma

./: .dockerignore  .env.sample  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/db/: prisma.py
app/graphql/: schema.py
app/models/: todos.py
prisma/: schema.prisma
prisma/migrations/20220707101539_todo/: migration.sql
scripts/: lint.sh
